[gd_scene load_steps=17 format=3 uid="uid://yufl3x3nrlh7"]

[ext_resource type="PackedScene" uid="uid://blfx4gmc8o7dg" path="res://scenes/enemy/skeleton_archer.tscn" id="1_dw6pw"]
[ext_resource type="Script" uid="uid://dbx3qsgt4e7c6" path="res://scenes/enemy/mimic.gd" id="2_6pb4l"]
[ext_resource type="Texture2D" uid="uid://cf880tqyh4lsu" path="res://img/world_sprites.svg" id="2_el4lh"]
[ext_resource type="AudioStream" uid="uid://cmwxk4q8664aq" path="res://resources/bite_3.wav" id="4_loj5a"]
[ext_resource type="AudioStream" uid="uid://co7crn827o6m7" path="res://resources/Goblin Death.wav" id="5_swoyh"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_0yyi4"]
load_path = "res://.godot/imported/world_sprites.svg-86afb6dc52fe0dcc8a43c1f0b2fdf631.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_0sbbk"]
atlas = SubResource("CompressedTexture2D_0yyi4")
region = Rect2(3590, 2948, 388, 199)

[sub_resource type="AtlasTexture" id="AtlasTexture_b5bg5"]
atlas = ExtResource("2_el4lh")
region = Rect2(3590, 2721, 388, 160)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3t536"]
size = Vector2(60, 120)

[sub_resource type="Animation" id="Animation_pwjnc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Head2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-17, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TeethArea2D:monitoring")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("TeethArea2D:monitorable")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_hcmuo"]
resource_name = "bite"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Head2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-17, 0), Vector2(-6, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TeethArea2D:monitoring")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("TeethArea2D:monitorable")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "audio"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AudioStreamPlayer2D")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("4_loj5a")
}],
"times": PackedFloat32Array(0)
}
tracks/3/use_blend = true

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8v8ja"]
_data = {
&"RESET": SubResource("Animation_pwjnc"),
&"bite": SubResource("Animation_hcmuo")
}

[sub_resource type="Animation" id="Animation_rxglo"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_56poh"]
resource_name = "death"
tracks/0/type = "audio"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AudioStreamPlayer2D")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.4,
"stream": ExtResource("5_swoyh")
}],
"times": PackedFloat32Array(0)
}
tracks/0/use_blend = true
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4p13c"]
_data = {
&"RESET": SubResource("Animation_rxglo"),
&"death": SubResource("Animation_56poh")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xdail"]
size = Vector2(24, 96)

[node name="Mimic" instance=ExtResource("1_dw6pw")]
script = ExtResource("2_6pb4l")
attack_damage = 5
desired_distance = 0.0
speed = 300.0
hp = 200
hp_max = 200

[node name="Body" parent="." index="0"]
visible = false

[node name="Head" parent="Neck" index="0"]
rotation = -1.5708
texture = SubResource("AtlasTexture_0sbbk")

[node name="Head2" type="Sprite2D" parent="." index="2"]
position = Vector2(-17, 0)
rotation = -1.5708
scale = Vector2(0.3, 0.3)
texture = SubResource("AtlasTexture_b5bg5")

[node name="CollisionShape2D" parent="." index="3"]
shape = SubResource("RectangleShape2D_3t536")

[node name="AnimationPlayer" parent="." index="6"]
autoplay = "walk"

[node name="TeethAnimationPlayer" type="AnimationPlayer" parent="." index="8"]
libraries = {
"": SubResource("AnimationLibrary_8v8ja")
}

[node name="MimicAnimationPlayer" type="AnimationPlayer" parent="." index="9"]
libraries = {
"": SubResource("AnimationLibrary_4p13c")
}

[node name="TeethArea2D" type="Area2D" parent="." index="10"]
collision_layer = 16
collision_mask = 10
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="TeethArea2D" index="0"]
position = Vector2(36, 0)
shape = SubResource("RectangleShape2D_xdail")
